<resources>
    <string name="app_name">A.W.P.</string>

    <string name="addAreaCode">Add</string>
    <string name="addLocality_title">Subscribe to Area</string>
    <string name="removeLocality">Delete</string>
    <string name="remove_locality_title">Unsubscribe to an Area</string>
    <string name="selectAreaCode">Select</string>
    <string name="selectAreaCode_title">Select an Area</string>

    <string name="refreshCodes">Refresh the Areas</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="logOut">Log Out</string>
    <string name="helpPhoneHint">Phone Number</string>
    <string name="loginText">Login</string>
    <string name="create">Subscribe</string>
    <string name="helpCodeHint">Area Code</string>
    <string name="logIn">Log In</string>
    <string name="signUp">Sign Up</string>
    <string name="subscription">Sign Up - Active Shooter Alert Platform</string>
    <string name="register">Register</string>

    <!--    Event Types-->
    <string name="shooting_name">Active Threat</string>
    <string name="fire_name">Fire</string>
    <string name="flood_name">Flood</string>
    <string name="lightning_name">Lightning</string>
    <string name="earthquake_name">Earthquake</string>
    <string name="tornado_name">Tornado</string>
    <string name="chemical_name">Chemical</string>
    <string name="snowstorm_name">Snowstorm</string>
    <string name="avalanche_name">Avalanche</string>
    <string name="heat_wave_name">Heat Wave</string>
    <string name="cold_wave_name">Cold Wave</string>
    <string name="report">Report</string>
    <string name="unsuscribeAreaCode">Unsuscribe to Area</string>
    <string name="suscribeAreaCode">Suscribe to Area</string>
    <string name="subscribeAreaCode">Subscribe to Area</string>
    <string name="report_event">Report an Event:</string>
    <string name="contentForReport">Details:</string>
    <string name="finalize_report">Finalize Report</string>
    <string name="submit_report">Submit Report</string>


</resources>