<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".LoginFragment"
    android:orientation="vertical">

    <!-- TODO: Update blank fragment layout -->


    <EditText android:id="@+id/phoneNumber"
        android:layout_gravity="center_horizontal|top"
        android:gravity="center_horizontal|top"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="phone"
        android:textSize="@dimen/phoneHintSize"
        android:hint="@string/helpPhoneHint"
        android:layout_margin="10dp"/>

    <LinearLayout
        android:layout_margin="16dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <Button android:id="@+id/login_button"
            android:layout_weight="1"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:textAllCaps="false"
            android:textSize="@dimen/loginSubmitSize"
            android:text="@string/logIn"
            android:layout_gravity="center_vertical"
            android:layout_margin="8dp"/>

        <Button
            android:id="@+id/createButton"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_margin="8dp"
            android:layout_weight="1"
            android:text="@string/signUp"
            android:textAllCaps="false"
            android:layout_gravity="center_vertical"
            android:textSize="@dimen/subscribeSize" />

    </LinearLayout>



</LinearLayout>